assignment1/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", "'('", 
                     "')'", "'['", "']'", "'.'", "','", "';'", "':'", "'{'", 
                     "'}'", "'='", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'" ]

    symbolicNames = [ "<INVALID>", "WS", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "COMMENT", "STRINGLIT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQ", "NE", "LT", "LE", 
                      "GT", "GE", "SCOPE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "DOT", "COMMA", "SEMI", "COLON", "LBRACE", 
                      "RBRACE", "EQUAL", "AUTO_K", "BREAK_K", "BOOLEAN_K", 
                      "DO_K", "ELSE_K", "FALSE_K", "FLOAT_K", "FOR_K", "FUNCTION_K", 
                      "IF_K", "INT_K", "RETURN_K", "STRING_K", "TRUE_K", 
                      "WHILE_K", "VOID_K", "OUT_K", "CONTINUE_K", "OF_K", 
                      "INHERIT_K", "ARRAY_K", "ID", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_manydecl = 1
    RULE_decl = 2
    RULE_atomic_type = 3
    RULE_array_type = 4
    RULE_dimension = 5
    RULE_intlist = 6
    RULE_arraylit = 7
    RULE_dtype = 8
    RULE_vardecl = 9
    RULE_simple_vardecl = 10
    RULE_full_vardecl = 11
    RULE_fullvar_helper = 12
    RULE_idlist = 13
    RULE_funcdecl = 14
    RULE_inherit = 15
    RULE_nullable_paralist = 16
    RULE_paralist = 17
    RULE_paradecl = 18
    RULE_index_opp = 19
    RULE_funccall = 20
    RULE_argument_list = 21
    RULE_exp = 22
    RULE_operand = 23
    RULE_nullable_explist = 24
    RULE_exp_list = 25
    RULE_stmt = 26
    RULE_assign_stmt = 27
    RULE_lhs = 28
    RULE_if_stmt = 29
    RULE_for_stmt = 30
    RULE_while_stmt = 31
    RULE_dowhile_stmt = 32
    RULE_break_stmt = 33
    RULE_continue_stmt = 34
    RULE_return_stmt = 35
    RULE_call_stmt = 36
    RULE_blockstmt = 37
    RULE_contentlist = 38
    RULE_content = 39

    ruleNames =  [ "program", "manydecl", "decl", "atomic_type", "array_type", 
                   "dimension", "intlist", "arraylit", "dtype", "vardecl", 
                   "simple_vardecl", "full_vardecl", "fullvar_helper", "idlist", 
                   "funcdecl", "inherit", "nullable_paralist", "paralist", 
                   "paradecl", "index_opp", "funccall", "argument_list", 
                   "exp", "operand", "nullable_explist", "exp_list", "stmt", 
                   "assign_stmt", "lhs", "if_stmt", "for_stmt", "while_stmt", 
                   "dowhile_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "blockstmt", "contentlist", "content" ]

    EOF = Token.EOF
    WS=1
    INTLIT=2
    FLOATLIT=3
    BOOLLIT=4
    COMMENT=5
    STRINGLIT=6
    ADD=7
    SUB=8
    MUL=9
    DIV=10
    MOD=11
    NOT=12
    AND=13
    OR=14
    EQ=15
    NE=16
    LT=17
    LE=18
    GT=19
    GE=20
    SCOPE=21
    LPAREN=22
    RPAREN=23
    LBRACK=24
    RBRACK=25
    DOT=26
    COMMA=27
    SEMI=28
    COLON=29
    LBRACE=30
    RBRACE=31
    EQUAL=32
    AUTO_K=33
    BREAK_K=34
    BOOLEAN_K=35
    DO_K=36
    ELSE_K=37
    FALSE_K=38
    FLOAT_K=39
    FOR_K=40
    FUNCTION_K=41
    IF_K=42
    INT_K=43
    RETURN_K=44
    STRING_K=45
    TRUE_K=46
    WHILE_K=47
    VOID_K=48
    OUT_K=49
    CONTINUE_K=50
    OF_K=51
    INHERIT_K=52
    ARRAY_K=53
    ID=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecl(self):
            return self.getTypedRuleContext(MT22Parser.ManydeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.manydecl()
            self.state = 81
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def manydecl(self):
            return self.getTypedRuleContext(MT22Parser.ManydeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_manydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydecl" ):
                return visitor.visitManydecl(self)
            else:
                return visitor.visitChildren(self)




    def manydecl(self):

        localctx = MT22Parser.ManydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecl)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.decl()
                self.state = 84
                self.manydecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN_K(self):
            return self.getToken(MT22Parser.BOOLEAN_K, 0)

        def INT_K(self):
            return self.getToken(MT22Parser.INT_K, 0)

        def FLOAT_K(self):
            return self.getToken(MT22Parser.FLOAT_K, 0)

        def STRING_K(self):
            return self.getToken(MT22Parser.STRING_K, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_type" ):
                return visitor.visitAtomic_type(self)
            else:
                return visitor.visitChildren(self)




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN_K) | (1 << MT22Parser.FLOAT_K) | (1 << MT22Parser.INT_K) | (1 << MT22Parser.STRING_K))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY_K(self):
            return self.getToken(MT22Parser.ARRAY_K, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def OF_K(self):
            return self.getToken(MT22Parser.OF_K, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(MT22Parser.ARRAY_K)
            self.state = 96
            self.dimension()
            self.state = 97
            self.match(MT22Parser.OF_K)
            self.state = 98
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(MT22Parser.LBRACK, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def RBRACK(self):
            return self.getToken(MT22Parser.RBRACK, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MT22Parser.LBRACK)
            self.state = 101
            self.intlist()
            self.state = 102
            self.match(MT22Parser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_intlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntlist" ):
                return visitor.visitIntlist(self)
            else:
                return visitor.visitChildren(self)




    def intlist(self):

        localctx = MT22Parser.IntlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_intlist)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MT22Parser.INTLIT)
                self.state = 105
                self.match(MT22Parser.COMMA)
                self.state = 106
                self.intlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MT22Parser.LBRACE, 0)

        def nullable_explist(self):
            return self.getTypedRuleContext(MT22Parser.Nullable_explistContext,0)


        def RBRACE(self):
            return self.getToken(MT22Parser.RBRACE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MT22Parser.LBRACE)
            self.state = 111
            self.nullable_explist()
            self.state = 112
            self.match(MT22Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def VOID_K(self):
            return self.getToken(MT22Parser.VOID_K, 0)

        def AUTO_K(self):
            return self.getToken(MT22Parser.AUTO_K, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_dtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDtype" ):
                return visitor.visitDtype(self)
            else:
                return visitor.visitChildren(self)




    def dtype(self):

        localctx = MT22Parser.DtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dtype)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN_K, MT22Parser.FLOAT_K, MT22Parser.INT_K, MT22Parser.STRING_K]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.atomic_type()
                pass
            elif token in [MT22Parser.ARRAY_K]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.array_type()
                pass
            elif token in [MT22Parser.VOID_K]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(MT22Parser.VOID_K)
                pass
            elif token in [MT22Parser.AUTO_K]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(MT22Parser.AUTO_K)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def simple_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Simple_vardeclContext,0)


        def full_vardecl(self):
            return self.getTypedRuleContext(MT22Parser.Full_vardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 120
                self.simple_vardecl()
                pass

            elif la_ == 2:
                self.state = 121
                self.full_vardecl()
                pass


            self.state = 124
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def dtype(self):
            return self.getTypedRuleContext(MT22Parser.DtypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_simple_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_vardecl" ):
                return visitor.visitSimple_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def simple_vardecl(self):

        localctx = MT22Parser.Simple_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_simple_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.idlist()
            self.state = 127
            self.match(MT22Parser.COLON)
            self.state = 128
            self.dtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_vardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def fullvar_helper(self):
            return self.getTypedRuleContext(MT22Parser.Fullvar_helperContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def dtype(self):
            return self.getTypedRuleContext(MT22Parser.DtypeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_full_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFull_vardecl" ):
                return visitor.visitFull_vardecl(self)
            else:
                return visitor.visitChildren(self)




    def full_vardecl(self):

        localctx = MT22Parser.Full_vardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_full_vardecl)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(MT22Parser.ID)
                self.state = 131
                self.match(MT22Parser.COMMA)
                self.state = 132
                self.fullvar_helper()
                self.state = 133
                self.match(MT22Parser.COMMA)
                self.state = 134
                self.exp(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(MT22Parser.ID)
                self.state = 137
                self.match(MT22Parser.COLON)
                self.state = 138
                self.dtype()
                self.state = 139
                self.match(MT22Parser.EQUAL)
                self.state = 140
                self.exp(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fullvar_helperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def fullvar_helper(self):
            return self.getTypedRuleContext(MT22Parser.Fullvar_helperContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def dtype(self):
            return self.getTypedRuleContext(MT22Parser.DtypeContext,0)


        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fullvar_helper

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullvar_helper" ):
                return visitor.visitFullvar_helper(self)
            else:
                return visitor.visitChildren(self)




    def fullvar_helper(self):

        localctx = MT22Parser.Fullvar_helperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_fullvar_helper)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(MT22Parser.ID)
                self.state = 145
                self.match(MT22Parser.COMMA)
                self.state = 146
                self.fullvar_helper()
                self.state = 147
                self.match(MT22Parser.COMMA)
                self.state = 148
                self.exp(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(MT22Parser.ID)
                self.state = 151
                self.match(MT22Parser.COLON)
                self.state = 152
                self.dtype()
                self.state = 153
                self.match(MT22Parser.EQUAL)
                self.state = 154
                self.exp(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_idlist)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(MT22Parser.ID)
                self.state = 159
                self.match(MT22Parser.COMMA)
                self.state = 160
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(MT22Parser.ID)
                pass

